[gd_scene load_steps=7 format=2]

[ext_resource path="res://map/multi-player/host/battle.gd" type="Script" id=1]
[ext_resource path="res://assets/gameplay-camera/gameplay_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/multi-player/ui/ui.tscn" type="PackedScene" id=4]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.254902, 0.823529, 1, 1 )

[node name="battle" type="Node"]
script = ExtResource( 1 )

[node name="spawn_point_1" type="Node" parent="."]

[node name="Position_1" type="Position3D" parent="spawn_point_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.8807, 0, -32.2562 )

[node name="Position_2" type="Position3D" parent="spawn_point_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.8807, 0, -0.280539 )

[node name="Position_3" type="Position3D" parent="spawn_point_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.8807, 0, 31.9615 )

[node name="Position_4" type="Position3D" parent="spawn_point_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.176407, 0, 31.9615 )

[node name="spawn_point_2" type="Node" parent="."]

[node name="Position_4" type="Position3D" parent="spawn_point_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0345, 0, 32.1616 )

[node name="Position_5" type="Position3D" parent="spawn_point_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0345, 0, -0.960589 )

[node name="Position_6" type="Position3D" parent="spawn_point_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0345, 0, -32.4883 )

[node name="Position_7" type="Position3D" parent="spawn_point_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.548565, 0, -32.4883 )

[node name="castle_holder" type="Node" parent="."]

[node name="farm_holder" type="Node" parent="."]

[node name="unit_holder" type="Node" parent="."]

[node name="terrain" parent="." instance=ExtResource( 3 )]

[node name="cameraPivot" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 40, 70 )
light_energy = 0.4
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="ui" parent="." instance=ExtResource( 4 )]

[node name="bot_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="countdown_start" type="Timer" parent="."]
autostart = true

[node name="countdown_end" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="on_deploy_card" from="ui" to="." method="_on_ui_on_deploy_card"]
[connection signal="timeout" from="bot_timer" to="." method="_on_bot_timer_timeout"]
[connection signal="timeout" from="countdown_start" to="." method="_on_countdown_start_timeout"]
[connection signal="timeout" from="countdown_end" to="." method="_on_countdown_end_timeout"]
